sandbox/output
ProfitJava6.java:10: error: cannot find symbol
            new MySupplier<Double>() {
                ^
  symbol:   class MySupplier
  location: class ProfitJava6
ProfitJava6.java:18: error: cannot find symbol
            new MySupplier<Double>() {
                ^
  symbol:   class MySupplier
  location: class ProfitJava6
ProfitJava6.java:27: error: cannot find symbol
            new MySupplier<Double>() {
                ^
  symbol:   class MySupplier
  location: class ProfitJava6
3 errors
